# timelined_array

./: .gitignore  .pdm-python  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/timelined_array/: __init__.py  time.py
tests/: __init__.py
